--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@angular/platform-browser": "~18.2.0",
     "@angular/platform-browser-dynamic": "~18.2.0",
     "@angular/router": "~18.2.0",
+    "axios": "^1.6.0",
     "date-fns": "^3.6.0",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.8.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -29,12 +33,15 @@
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
     "@nx/angular": "19.6.1",
+    "@nx/esbuild": "19.6.1",
     "@nx/eslint": "19.6.1",
     "@nx/eslint-plugin": "19.6.1",
     "@nx/jest": "19.6.1",
     "@nx/js": "19.6.1",
+    "@nx/node": "^19.6.1",
     "@nx/workspace": "19.6.1",
     "@schematics/angular": "~18.2.0",
+    "@simondotm/nx-firebase": "^2.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -43,11 +50,16 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
+    "firebase-functions-test": "^3.1.1",
+    "firebase-tools": "^12.9.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
+    "kill-port": "^2.0.1",
     "nx": "19.6.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
